fixing todos